# Jackal

./: .gitignore  .gitmodules  README.md  setup.py
Jackal/: CMakeLists.txt
Jackal/CMake/: FindX11_XCB.cmake  Macros.cmake  Setup.cmake
Jackal/Shaders/Canis/: README.md
Jackal/Shaders/Test/GLSL/: blinn-phong.frag  blinn-phong.vert
Jackal/Source/: CMakeLists.txt
Jackal/Source/Animation/: CMakeLists.txt
Jackal/Source/Audio/: CMakeLists.txt
Jackal/Source/CMake/: Macros.cmake  Setup.cmake
Jackal/Source/Canis/: CMakeLists.txt
Jackal/Source/Canis/Public/Canis/: Compiler.hpp  Token.hpp
Jackal/Source/Core/: CMakeLists.txt
Jackal/Source/Core/Private/Internationalization/: Locale.cpp
Jackal/Source/Core/Private/Linux/: LinuxWindow.cpp
Jackal/Source/Core/Private/Logging/: LogData.cpp  LogData.hpp  Logger.cpp
Jackal/Source/Core/Private/Math/: Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  MatrixMath.cpp  Quaternion.cpp  QuaternionMath.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  VectorMath.cpp
Jackal/Source/Core/Private/Memory/: MemLeakDetection.hpp  MemoryAlloc.hpp  MemoryPool.cpp
Jackal/Source/Core/Private/Structure/: JString.cpp
Jackal/Source/Core/Private/Utility/: JStringUtils.cpp  TextureLoader.cpp
Jackal/Source/Core/Private/Win32/: Win32Clock.cpp  Win32Filesystem.cpp  Win32Thread.cpp  Win32Time.cpp  Win32Window.cpp
Jackal/Source/Core/Public/Logging/: Assertions.hpp  Debugging.hpp  Logger.hpp  TextBase.hpp
Jackal/Source/Core/Public/Math/: Common.hpp  Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  MatrixMath.hpp  Quaternion.hpp  QuaternionMath.hpp  Ray.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Vector4f.hpp  VectorMath.hpp
Jackal/Source/Core/Public/Memory/: Allocator.hpp  JMalloc.hpp  MemoryPool.hpp  SPtr.hpp  StackAlloc.hpp
Jackal/Source/Core/Public/Platform/: Api.hpp  Hardware.hpp  JTypes.hpp  Platform.hpp
Jackal/Source/Core/Public/Structure/: HTable.hpp  JString.hpp  JVector.hpp
Jackal/Source/Core/Public/Win32/: Win32Window.hpp
Jackal/Source/Dx3D11Device/: CMakeLists.txt
Jackal/Source/Dx3D11Device/Public/Dx3D11Device/: Dx3D11Config.hpp  Dx3D11Device.hpp
Jackal/Source/Dx3D12Device/: CMakeLists.txt
Jackal/Source/Dx3D12Device/Private/: Dx12Device.cpp
Jackal/Source/Dx3D12Device/Public/Dx3D12Device/: Dx12Config.hpp  Dx12Device.hpp
Jackal/Source/Engine/: CMakeLists.txt
Jackal/Source/FMOD/: CMakeLists.txt
Jackal/Source/Input/: CMakeLists.txt
Jackal/Source/Input/Public/Input/: Keyboard.hpp
Jackal/Source/OpenAL/: CMakeLists.txt
Jackal/Source/OpenGLDevice/: CMakeLists.txt
Jackal/Source/OpenGLDevice/Private/: OpenGLCommandBuffer.cpp  OpenGLDevice.cpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.hpp  OpenGLGraphicsPipelineState.cpp  OpenGLMaterialLayout.cpp  OpenGLNative.cpp  OpenGLRenderPass.cpp  OpenGLRenderTarget.cpp  OpenGLSampler.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLTexture2D.cpp  OpenGLTexture3D.cpp  OpenGLTextureCubeMap.cpp  OpenGLUniformBuffer.cpp  OpenGLVertexBuffer.cpp
Jackal/Source/OpenGLDevice/Private/Win32/: Win32OpenGL.cpp
Jackal/Source/OpenGLDevice/Public/OpenGLDevice/: OpenGLBuffer.hpp  OpenGLCommandBuffer.hpp  OpenGLConfigs.hpp  OpenGLDevice.hpp  OpenGLFrameBuffer.hpp  OpenGLGraphicsPipelineState.hpp  OpenGLMaterialLayout.hpp  OpenGLNative.hpp  OpenGLRenderPass.hpp  OpenGLRenderTarget.hpp  OpenGLSampler.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLTexture2D.hpp  OpenGLTexture3D.hpp  OpenGLTextureCubeMap.hpp  OpenGLUniformBuffer.hpp  OpenGLVertexBuffer.hpp
Jackal/Source/Profiler/: CMakeLists.txt
Jackal/Source/RenderDevice/: CMakeLists.txt
Jackal/Source/RenderDevice/Private/: RenderObject.cpp  Shader.cpp
Jackal/Source/RenderDevice/Public/RenderDevice/: Buffer.hpp  CommandBuffer.hpp  ComputePipelineState.hpp  CubeMap.hpp  FrameBuffer.hpp  GraphicsPipelineState.hpp  Material.hpp  MaterialLayout.hpp  OcclusionQuery.hpp  RenderDevice.hpp  RenderDeviceTypes.hpp  RenderObject.hpp  RenderPass.hpp  RenderTarget.hpp  Sampler.hpp  Shader.hpp  Texture.hpp  Texture2D.hpp  Texture3D.hpp  TextureCubeMap.hpp  UniformBuffer.hpp  Vertex.hpp  VertexBuffer.hpp  ViewPort.hpp
Jackal/Source/Renderer/: CMakeLists.txt
Jackal/Source/Renderer/Private/: Renderer.cpp
Jackal/Source/Renderer/Public/Renderer/: IRenderer.hpp  Renderable.hpp  Renderer.hpp
Jackal/Source/VulkanDevice/: CMakeLists.txt
Jackal/Source/VulkanDevice/Private/: VulkanDevice.cpp  VulkanFrameBuffer.hpp
Jackal/Source/VulkanDevice/Private/Win32/: Win32Vulkan.cpp
Jackal/Source/VulkanDevice/Public/VulkanDevice/: VulkanCommandBuffer.hpp  VulkanConfigs.hpp  VulkanDevice.hpp  VulkanGraphicsPipelineState.hpp  VulkanMaterialLayout.hpp  VulkanRenderPass.hpp  VulkanRenderTarget.hpp  VulkanSampler.hpp  VulkanShader.hpp  VulkanSwapChain.hpp  VulkanVertexBuffer.hpp
Jackal/Source/Wwave/: CMakeLists.txt
Jackal/Source/Wwise/: CMakeLists.txt
Jackal/Tests/: CMakeLists.txt  Main.cpp
Jackal/Tests/Core/: CMakeLists.txt
Jackal/Tests/Core/Linux/: LinuxWindowTest.cpp  LinuxWindowTest.hpp
Jackal/Tests/Core/Math/: MatrixTest.cpp  MatrixTest.hpp  QuatTest.cpp  QuatTest.hpp
Jackal/Tests/Core/Memory/: MemoryTest.cpp  MemoryTest.hpp
Jackal/Tests/Core/Structure/: JStringTest.cpp  JStringTest.hpp
Jackal/Tests/Core/Win32/: Win32ThreadTest.cpp  Win32ThreadTest.hpp  Win32WindowTest.cpp  Win32WindowTest.hpp
jackal/: CMakeLists.txt
jackal/src/: CMakeLists.txt
jackal/src/cmake/: setup.cmake
jackal/src/core/: CMakeLists.txt
jackal/src/core/logging/private/: logger.cpp
jackal/src/core/logging/public/: assertions.hpp  logger.hpp  text_base.hpp
jackal/src/core/math/: common.hpp  matrix.hpp  matrix_math.hpp  quaternion.hpp  quaternion_math.hpp  vector.hpp  vector_math.hpp
jackal/src/core/math/internal/: matrix.inl  quaternion.inl  quaternion_math.inl  vector.inl  vector_math.inl
jackal/src/core/memory/public/: allocator.hpp  (+2 more)
jackal/src/engine/: CMakeLists.txt
jackal/src/render_device/: CMakeLists.txt
jackal/tests/: CMakeLists.txt  main.cpp
jackal/tests/core/: CMakeLists.txt
jackal/tests/core/math/: matrix_test.cpp  quat_test.cpp
(+85 files in other folders)
